kubernetes/axonserver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axonserver
  labels:
    app: axonserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: axonserver
  template:
    metadata:
      labels:
        app: axonserver
    spec:
      containers:
        - name: axonserver
          image: axoniq/axonserver
          imagePullPolicy: Always
          ports:
            - name: grpc
              containerPort: 8124
              protocol: TCP
            - name: gui
              containerPort: 8024
              protocol: TCP
          readinessProbe:
            httpGet:
              port: 8024
              path: /actuator/health
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: axonserver-gui
  labels:
    app: axonserver-gui
spec:
  ports:
    - name: gui
      port: 8024
      targetPort: 8024
  selector:
    app: axonserver
---
apiVersion: v1
kind: Service
metadata:
  name: axonserver
  labels:
    app: axonserver
spec:
  ports:
    - name: grpc
      port: 8124
  selector:
    app: axonserver
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: axonserver-gui
spec:
  rules:
    - host: axonserver
      http:
        paths:
          - backend:
              service:
                name: axonserver-gui
                port:
                  number: 8024
            pathType: Prefix
            path: /
