kubernetes/giftcard-command.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: giftcard-demo-command
  labels:
    app: giftcard-demo-command
spec:
  replicas: 1
  selector:
    matchLabels:
      app: giftcard-demo-command
  template:
    metadata:
      labels:
        app: giftcard-demo-command
    spec:
      containers:
        - name: giftcard-demo-command
          image: giftcard-demo-command:2
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: giftcard-demo-command-service
  labels:
    app: giftcard-demo-command-service
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: giftcard-demo-command
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: giftcard-demo-command-ingres
spec:
  rules:
    - host: giftcard-demo-command
      http:
        paths:
          - backend:
              service:
                name: giftcard-demo-command-service
                port:
                  number: 8080
            pathType: Prefix
            path: /
